ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - sparkesports.gg
    secretName: spark-esports-tls
  rules:
  - host: sparkesports.gg
    http: 
      paths:
      - path: /
        backend:
          serviceName: spark-esports-deployment
          servicePort: 8080
